--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <nav>
         <a href="#">Início</a>
         <a href="#">Destinos</a>
-        <a href="#">Pacotes</a>
-        <a href="#">Sobre Nós</a>
-        <a href="#">Contato</a>
+        <a href="pacotes.html">Pacotes</a>
+        <a href="sobre.html">Sobre Nós</a>
+        <a href="contato.html">Contato</a>
         <a href="#" class="contact-button">Fale Conosco</a>
       </nav>
     </div>
