--- a/pacotes.html
+++ b/pacotes.html
@@ -45,6 +45,27 @@
       </div>
     </section>
 
+    <section class="pacotes-lista">
+      <div class="pacote">
+        <h3>Rio de Janeiro</h3>
+        <p>5 dias | Hotel 4 estrelas | Passeios incluídos</p>
+        <p class="preco">R$ 1.299</p>
+        <a href="#" class="btn">Ver Detalhes</a>
+      </div>
+      <div class="pacote">
+        <h3>Florianópolis</h3>
+        <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
+        <p class="preco">R$ 1.599</p>
+        <a href="#" class="btn">Ver Detalhes</a>
+      </div>
+      <div class="pacote">
+        <h3>Salvador</h3>
+        <p>6 dias | City tour | Guia local</p>
+        <p class="preco">R$ 1.399</p>
+        <a href="#" class="btn">Ver Detalhes</a>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
