--- a/pacotes.html
+++ b/pacotes.html
@@ -26,19 +26,20 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
-        <h3>Rio de Janeiro</h3>
-        <p>5 dias | Hotel 4 estrelas | Passeios incluídos</p>
+        <img src =""
+        <h3>Austrália</h3>
+        <p>10 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Florianópolis</h3>
+        <h3>Croácia</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
         <p class="preco">R$ 1.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Salvador</h3>
+        <h3>Romênia</h3>
         <p>6 dias | City tour | Guia local</p>
         <p class="preco">R$ 1.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
@@ -47,19 +48,19 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
-        <h3>Rio de Janeiro</h3>
+        <h3>Suíça</h3>
         <p>5 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Florianópolis</h3>
+        <h3>Coreia do Sul</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
         <p class="preco">R$ 1.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Salvador</h3>
+        <h3>Uruguai</h3>
         <p>6 dias | City tour | Guia local</p>
         <p class="preco">R$ 1.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
