--- a/contato.html
+++ b/contato.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato - Viagens Brasil</title>
+    <title>Contato - Além dos Sonhos</title>
     <link rel="stylesheet" href="contato.css" />
   </head>
   <body>
     <div class="header">
-      <h2>✈ Viagens Brasil</h2>
+      <h2>✈ Além dos Sonhos</h2>
       <nav>
         <a href="index.html">Início</a>
         <a href="#">Destinos</a>
@@ -46,7 +46,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
-          <h3>Viagens Brasil</h3>
+          <h3>Além dos Sonhos</h3>
           <p>Seu portal de viagens com os melhores pacotes e destinos!</p>
         </div>
         <div class="footer-section">
@@ -61,13 +61,13 @@
         <div class="footer-section">
           <h3>Contato</h3>
           <ul>
-            <li>contato@viagensbrasil.com.br</li>
+            <li>contato@alemdossonhos.com.br</li>
             <li>+55 (21) 9876-5432</li>
           </ul>
         </div>
       </div>
       <div class="footer-bottom">
-        &copy; 2025 Viagens Brasil. Todos os direitos reservados.
+        &copy; 2025 Além dos Sonhos. Todos os direitos reservados.
       </div>
     </footer>
   </body>
