--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viagens Brasil</title>
+    <title>Além dos Sonhos</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="header">
-      <h2>✈ Viagens Brasil</h2>
+      <h2>✈ Além dos Sonhos</h2>
       <nav>
         <a href="#">Início</a>
         <a href="#">Destinos</a>
@@ -25,7 +25,7 @@
         nossos pacotes exclusivos.
       </p>
       <div class="buttons">
-        <a href="#">Ver Destinos</a>
+        <a href="pacotes.html">Ver Pacotes</a>
         <a href="#" class="secondary">Pacotes Promocionais</a>
       </div>
     </div>
@@ -98,7 +98,7 @@
     </section>
 
     <section class="why-choose-us">
-      <h2>Por que escolher a Viagens Brasil?</h2>
+      <h2>Por que escolher a Além dos Sonhos?</h2>
       <p>Oferecemos experiência, qualidade e segurança em todas as viagens</p>
       <div class="features-container">
         <div class="feature">
@@ -175,7 +175,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-section">
-                <h3>Viagens Brasil</h3>
+                <h3>Além dos Sonhos</h3>
                 <p>Sua melhor escolha para viagens inesquecíveis!<br><br>
                     Oferecemos pacotes personalizados para destinos nacionais e internacionais com preços competitivos e atendimento de excelência.</p>
                 <div class="social-icons">
@@ -200,13 +200,13 @@
                 <ul>
                     <li><i class="fas fa-map-marker-alt"></i> Av. Atlântica, 2000 - Rio de Janeiro, RJ</li>
                     <li><i class="fas fa-phone"></i> +55 (21) 9876-5432</li>
-                    <li><i class="fas fa-envelope"></i> contato@viagensbrasil.com.br</li>
+                    <li><i class="fas fa-envelope"></i> contato@alemdossonhos.com.br</li>
                     <li><i class="fas fa-clock"></i> Segunda a Sexta: 9h às 18h</li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            &copy; 2023 Viagens Brasil. Todos os direitos reservados.
+            &copy; 2025 Além dos Sonhos. Todos os direitos reservados.
         </div>
     </footer>
     
