--- a/pacotes.html
+++ b/pacotes.html
@@ -26,7 +26,6 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
-        <img src =""
         <h3>Austrália</h3>
         <p>10 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
@@ -70,7 +69,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
-          <h3>Viagens Brasil</h3>
+          <h3>Além dos Sonhos</h3>
           <p>Seu portal de viagens com os melhores pacotes e destinos!</p>
         </div>
         <div class="footer-section">
@@ -85,13 +84,13 @@
         <div class="footer-section">
           <h3>Contato</h3>
           <ul>
-            <li>contato@viagensbrasil.com.br</li>
+            <li>contato@alemdossonhos.com.br</li>
             <li>+55 (21) 9876-5432</li>
           </ul>
         </div>
       </div>
       <div class="footer-bottom">
-        &copy; 2025 Viagens Brasil. Todos os direitos reservados.
+        &copy; 2025 Além dos Sonhos. Todos os direitos reservados.
       </div>
     </footer>
   </body>
