--- a/sobre.html
+++ b/sobre.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Nós - Viagens Brasil</title>
+    <title>Sobre Nós - Além dos Sonhos</title>
     <link rel="stylesheet" href="sobre.css" />
   </head>
   <body>
     <div class="header">
-      <h2>✈ Viagens Brasil</h2>
+      <h2>✈ Além dos Sonhos</h2>
       <nav>
         <a href="index.html">Início</a>
         <a href="#">Destinos</a>
@@ -22,7 +22,7 @@
     <section class="sobre-nos">
       <h1>Quem Somos</h1>
       <p>
-        A Viagens Brasil é uma agência especializada em transformar sonhos em
+        A Além dos Sonhos é uma agência especializada em transformar sonhos em
         realidade. Atuamos há mais de 10 anos no mercado de turismo, levando
         nossos clientes para os destinos mais incríveis do Brasil e do mundo.
       </p>
@@ -55,7 +55,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
-          <h3>Viagens Brasil</h3>
+          <h3>Além dos Sonhos</h3>
           <p>Seu portal de viagens com os melhores pacotes e destinos!</p>
         </div>
         <div class="footer-section">
@@ -70,13 +70,13 @@
         <div class="footer-section">
           <h3>Contato</h3>
           <ul>
-            <li>contato@viagensbrasil.com.br</li>
+            <li>contato@alemdossonhos.com.br</li>
             <li>+55 (21) 9876-5432</li>
           </ul>
         </div>
       </div>
       <div class="footer-bottom">
-        &copy; 2025 Viagens Brasil. Todos os direitos reservados.
+        &copy; 2025 Além dos Sonhos. Todos os direitos reservados.
       </div>
     </footer>
   </body>
