--- a/pacotes.html
+++ b/pacotes.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pacotes - Viagens Brasil</title>
+    <title>Pacotes - Além dos Sonhos</title>
     <link rel="stylesheet" href="pacotes.css" />
   </head>
   <body>
     <div class="header">
-      <h2>✈ Viagens Brasil</h2>
+      <h2>✈ Além dos Sonhos</h2>
       <nav>
         <a href="index.html">Início</a>
         <a href="#">Destinos</a>
