--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <a href="pacotes.html">Pacotes</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="contato.html">Contato</a>
-        <a href="#" class="contact-button">Fale Conosco</a>
+        <a href="contato.html" class="contact-button">Fale Conosco</a>
       </nav>
     </div>
     <div class="hero">
-      <h1>Descubra o Brasil</h1>
+      <h1>Descubra o Mundo</h1>
       <p>
-        Explore as belezas naturais e a diversidade cultural do Brasil com
+        Explore as belezas naturais e a diversidade cultural do mundo com
         nossos pacotes exclusivos.
       </p>
       <div class="buttons">
