--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
         <a href="pacotes.html">Pacotes</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="contato.html" class="active">Contato</a>
-        <a href="#" class="contact-button">Fale Conosco</a>
+        <a href="contato.html" class="contact-button">Fale Conosco</a>
       </nav>
     </div>
 
