--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
         <a href="pacotes.html">Pacotes</a>
         <a href="sobre.html" class="active">Sobre Nós</a>
         <a href="contato.html">Contato</a>
-        <a href="#" class="contact-button">Fale Conosco</a>
+        <a href="contato.html" class="contact-button">Fale Conosco</a>
       </nav>
     </div>
 
