--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <h2>✈ Além dos Sonhos</h2>
       <nav>
-        <a href="#">Início</a>
+        <a href="index.html">Início</a>
         <a href="#">Destinos</a>
         <a href="pacotes.html">Pacotes</a>
         <a href="sobre.html">Sobre Nós</a>
