--- a/pacotes.html
+++ b/pacotes.html
@@ -26,19 +26,19 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
-        <h3>Austrália</h3>
+        <h3>Sunshine Coast, Austrália</h3>
         <p>10 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Croácia</h3>
+        <h3>Zagreb, Croácia</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
         <p class="preco">R$ 1.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Romênia</h3>
+        <h3>Bucareste, Romênia</h3>
         <p>6 dias | City tour | Guia local</p>
         <p class="preco">R$ 1.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
@@ -47,19 +47,19 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
-        <h3>Suíça</h3>
+        <h3>Lucerna, Suíça</h3>
         <p>5 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Coreia do Sul</h3>
+        <h3> Seul, Coreia do Sul</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
         <p class="preco">R$ 1.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
-        <h3>Uruguai</h3>
+        <h3>Montevidéu, Uruguai</h3>
         <p>6 dias | City tour | Guia local</p>
         <p class="preco">R$ 1.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
