--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         <p>
           A Sunshine Coast, localizada no sudeste de Queensland, é conhecida por suas praias deslumbrantes, como Noosa
           Heads e Mooloolaba, além de um interior montanhoso
-          com vilarejos charmosos como Maleny. É um destino popular para surfistas, amantes da natureza e famílias em
-          busca de relaxamento à beira-mar.
+          com vilarejos charmosos como Maleny. 
         </p>
         <p class="price">A partir de R$ 1.299</p>
         <a href="pacotes.html" class="btn">Saiba mais</a>
@@ -96,8 +95,6 @@
         <h3>Bucareste, Romênia <span class="badge popular">Popular</span></h3>
         <p>Bucareste, a capital da Romênia, é conhecida por sua arquitetura eclética que mistura estilos históricos,
           comunistas e modernos.
-          Destaques incluem o monumental Palácio do Parlamento, um dos maiores edifícios administrativos do mundo, e o
-          Palácio Real, que abriga
           o Museu Nacional de Arte da Romênia.</p>
         <p class="price">A partir de R$ 1.199</p>
         <a href="pacotes.html" class="btn">Saiba mais</a>
