--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p>
           A Sunshine Coast, localizada no sudeste de Queensland, é conhecida por suas praias deslumbrantes, como Noosa
           Heads e Mooloolaba, além de um interior montanhoso
-          com vilarejos charmosos como Maleny. 
+          com vilarejos charmosos como Maleny.
         </p>
         <p class="price">A partir de R$ 1.299</p>
         <a href="pacotes.html" class="btn">Saiba mais</a>
@@ -94,8 +94,9 @@
           alt="Bucareste" />
         <h3>Bucareste, Romênia <span class="badge popular">Popular</span></h3>
         <p>Bucareste, a capital da Romênia, é conhecida por sua arquitetura eclética que mistura estilos históricos,
-          comunistas e modernos.
-          o Museu Nacional de Arte da Romênia.</p>
+          comunistas e modernos.Destaques incluem o monumental Palácio do Parlamento e o Palácio Real, que abriga o
+          Museu Nacional de Arte da Romênia.
+        </p>
         <p class="price">A partir de R$ 1.199</p>
         <a href="pacotes.html" class="btn">Saiba mais</a>
       </div>
