--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <p>
           Seul é uma metrópole vibrante que combina tradição e modernidade. A cidade abriga palácios históricos como
           Gyeongbokgung,
-          bairros tradicionais como Bukchon Hanok Village e marcos modernos como a N Seoul Tower, localizada no Monte
-          Namsan.
+          bairros tradicionais como Bukchon Hanok Village e marcos modernos como a N Seoul Tower.
         </p>
         <p class="price">A partir de R$ 3.499</p>
         <a href="pacotes.html" class="btn">Saiba mais</a>
@@ -94,8 +93,7 @@
           alt="Bucareste" />
         <h3>Bucareste, Romênia <span class="badge popular">Popular</span></h3>
         <p>Bucareste, a capital da Romênia, é conhecida por sua arquitetura eclética que mistura estilos históricos,
-          comunistas e modernos.Destaques incluem o monumental Palácio do Parlamento e o Palácio Real, que abriga o
-          Museu Nacional de Arte da Romênia.
+          comunistas e modernos.Destaques incluem o monumental Palácio do Parlamento e o Palácio Real.
         </p>
         <p class="price">A partir de R$ 1.199</p>
         <a href="pacotes.html" class="btn">Saiba mais</a>
