--- a/pacotes.html
+++ b/pacotes.html
@@ -26,18 +26,21 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
+        <img src="https://images.unsplash.com/photo-1591190927683-1cd338cfdcbf?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Sunshine Coast, Austrália</h3>
         <p>10 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
+        <img src="https://images.unsplash.com/photo-1730645612587-34b10451790a?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Zagreb, Croácia</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
         <p class="preco">R$ 1.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
+        <img src="https://images.unsplash.com/photo-1574974915729-40753c60260d?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Bucareste, Romênia</h3>
         <p>6 dias | City tour | Guia local</p>
         <p class="preco">R$ 1.399</p>
@@ -47,18 +50,21 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
+        <img src="https://images.unsplash.com/photo-1684871640396-8e2d366f4f0c?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Lucerna, Suíça</h3>
         <p>5 dias | Hotel 4 estrelas | Passeios incluídos</p>
         <p class="preco">R$ 1.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
+        <img src="https://images.unsplash.com/photo-1671101757570-c0b573c6feb3?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3> Seul, Coreia do Sul</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
         <p class="preco">R$ 1.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
+        <img src="https://images.unsplash.com/photo-1643753265232-45c28cc86a12?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Montevidéu, Uruguai</h3>
         <p>6 dias | City tour | Guia local</p>
         <p class="preco">R$ 1.399</p>
