--- a/pacotes.html
+++ b/pacotes.html
@@ -42,7 +42,7 @@
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1574974915729-40753c60260d?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Bucareste, Romênia</h3>
-        <p>6 dias | City tour | Guia local</p>
+        <p>6 dias | City tour | Guia local em português</p>
         <p class="preco">R$ 1.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
@@ -66,7 +66,7 @@
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1643753265232-45c28cc86a12?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Montevidéu, Uruguai</h3>
-        <p>6 dias | City tour | Guia local</p>
+        <p>6 dias | City tour | Guia local em português</p>
         <p class="preco">R$ 1.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
