--- a/sobre.html
+++ b/sobre.html
@@ -1,83 +1,93 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Nós - Além dos Sonhos</title>
-    <link rel="stylesheet" href="sobre.css" />
-  </head>
-  <body>
-    <div class="header">
-      <h2>✈ Além dos Sonhos</h2>
-      <nav>
-        <a href="index.html">Início</a>
-        <a href="#">Destinos</a>
-        <a href="pacotes.html">Pacotes</a>
-        <a href="sobre.html" class="active">Sobre Nós</a>
-        <a href="contato.html">Contato</a>
-        <a href="contato.html" class="contact-button">Fale Conosco</a>
-      </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sobre Nós - Além dos Sonhos</title>
+  <link rel="stylesheet" href="sobre.css" />
+</head>
+
+<body>
+  <div class="header">
+    <h2>✈ Além dos Sonhos</h2>
+    <nav>
+      <a href="index.html">Início</a>
+      <a href="#">Destinos</a>
+      <a href="pacotes.html">Pacotes</a>
+      <a href="sobre.html" class="active">Sobre Nós</a>
+      <a href="contato.html">Contato</a>
+      <a href="contato.html" class="contact-button">Fale Conosco</a>
+    </nav>
+  </div>
+
+  <section class="sobre-nos">
+    <h1>Quem Somos</h1>
+    <p>
+      Fundada em 1981, a Além dos Sonhos nasceu com a proposta inovadora de transformar viagens em experiências
+      sofisticadas, sustentáveis e memoráveis. Com quase 45 anos de trajetória, nos destacamos pela criação de roteiros
+      exclusivos, que conectam nossos clientes a destinos ecológicos, exóticos e fora do convencional.
+
+      Mais do que viagens, oferecemos vivências personalizadas, pensadas para quem valoriza o conforto, a exclusividade
+      e o respeito ao meio ambiente. Nossa equipe multidisciplinar — composta por especialistas em turismo, ecologia e
+      biologia — desenvolve experiências conscientes, sempre em harmonia com a natureza e as culturas locais.
+
+      Contamos também com um time jurídico altamente qualificado, que assegura a tranquilidade e segurança legal de cada
+      viagem. Na Além dos Sonhos, cuidamos de cada detalhe, porque acreditamos que viajar bem é viajar com propósito.
+    </p>
+
+    <div class="missao-visao-valores">
+      <div class="bloco">
+        <h2>Missão</h2>
+        <p>
+          Proporcionar experiências inesquecíveis com qualidade, segurança e
+          responsabilidade.
+        </p>
+      </div>
+      <div class="bloco">
+        <h2>Visão</h2>
+        <p>
+          Ser referência em turismo nacional, reconhecida pela excelência no
+          atendimento e inovação em roteiros.
+        </p>
+      </div>
+      <div class="bloco">
+        <h2>Valores</h2>
+        <p>
+          Comprometimento, ética, transparência, respeito ao cliente e amor
+          por viajar.
+        </p>
+      </div>
     </div>
+  </section>
 
-    <section class="sobre-nos">
-      <h1>Quem Somos</h1>
-      <p>
-        A Além dos Sonhos é uma agência especializada em transformar sonhos em
-        realidade. Atuamos há mais de 10 anos no mercado de turismo, levando
-        nossos clientes para os destinos mais incríveis do Brasil e do mundo.
-      </p>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-section">
+        <h3>Além dos Sonhos</h3>
+        <p>Seu portal de viagens com os melhores pacotes e destinos!</p>
+      </div>
+      <div class="footer-section">
+        <h3>Links Rápidos</h3>
+        <ul>
+          <li><a href="index.html">Página Inicial</a></li>
+          <li><a href="pacotes.html">Pacotes</a></li>
+          <li><a href="sobre.html">Sobre Nós</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Contato</h3>
+        <ul>
+          <li>contato@alemdossonhos.com.br</li>
+          <li>+55 (21) 9876-5432</li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 1981 Além dos Sonhos. Todos os direitos reservados.
+    </div>
+  </footer>
+</body>
 
-      <div class="missao-visao-valores">
-        <div class="bloco">
-          <h2>Missão</h2>
-          <p>
-            Proporcionar experiências inesquecíveis com qualidade, segurança e
-            responsabilidade.
-          </p>
-        </div>
-        <div class="bloco">
-          <h2>Visão</h2>
-          <p>
-            Ser referência em turismo nacional, reconhecida pela excelência no
-            atendimento e inovação em roteiros.
-          </p>
-        </div>
-        <div class="bloco">
-          <h2>Valores</h2>
-          <p>
-            Comprometimento, ética, transparência, respeito ao cliente e amor
-            por viajar.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-section">
-          <h3>Além dos Sonhos</h3>
-          <p>Seu portal de viagens com os melhores pacotes e destinos!</p>
-        </div>
-        <div class="footer-section">
-          <h3>Links Rápidos</h3>
-          <ul>
-            <li><a href="index.html">Página Inicial</a></li>
-            <li><a href="pacotes.html">Pacotes</a></li>
-            <li><a href="sobre.html">Sobre Nós</a></li>
-            <li><a href="contato.html">Contato</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Contato</h3>
-          <ul>
-            <li>contato@alemdossonhos.com.br</li>
-            <li>+55 (21) 9876-5432</li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        &copy; 1981 Além dos Sonhos. Todos os direitos reservados.
-      </div>
-    </footer>
-  </body>
 </html>
