--- a/sobre.html
+++ b/sobre.html
@@ -26,15 +26,15 @@
     <p>
       Fundada em 1981, a Além dos Sonhos nasceu com a proposta inovadora de transformar viagens em experiências
       sofisticadas, sustentáveis e memoráveis. Com quase 45 anos de trajetória, nos destacamos pela criação de roteiros
-      exclusivos, que conectam nossos clientes a destinos ecológicos, exóticos e fora do convencional.
+      exclusivos, que conectam nossos clientes a destinos ecológicos, exóticos e fora do convencional.</p>
 
-      Mais do que viagens, oferecemos vivências personalizadas, pensadas para quem valoriza o conforto, a exclusividade
-      e o respeito ao meio ambiente. Nossa equipe multidisciplinar — composta por especialistas em turismo, ecologia e
-      biologia — desenvolve experiências conscientes, sempre em harmonia com a natureza e as culturas locais.
+      <p>Mais do que viagens, oferecemos vivências personalizadas, pensadas para quem valoriza o conforto, a exclusividade
+      e o respeito ao meio ambiente. Nossa equipe multidisciplinar composta por especialistas em turismo, ecologia e
+      biologia, desenvolve experiências conscientes, sempre em harmonia com a natureza e as culturas locais.</p>
 
-      Contamos também com um time jurídico altamente qualificado, que assegura a tranquilidade e segurança legal de cada
-      viagem. Na Além dos Sonhos, cuidamos de cada detalhe, porque acreditamos que viajar bem é viajar com propósito.
-    </p>
+      <p>Contamos também com um time jurídico altamente qualificado, que assegura a tranquilidade e segurança legal de cada
+      viagem. Na Além dos Sonhos, cuidamos de cada detalhe, porque acreditamos que viajar bem é viajar com propósito.</p>
+    
 
     <div class="missao-visao-valores">
       <div class="bloco">
