--- a/pacotes.html
+++ b/pacotes.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="header">
-      <h2>✈ Além dos Sonhos</h2>
+      <img src="copia.png" alt="Logo Além dos Sonhos" class="header-logo">
       <nav>
         <a href="index.html">Início</a>
-        <a href="#">Destinos</a>
+        <a href="pegada-carbono.html">Pegada CO₂</a>
         <a href="pacotes.html" class="active">Pacotes</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="contato.html">Contato</a>
@@ -26,24 +26,24 @@
 
     <section class="pacotes-lista">
       <div class="pacote">
-        <img src="https://images.unsplash.com/photo-1591190927683-1cd338cfdcbf?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
-        <h3>Sunshine Coast, Austrália</h3>
-        <p>10 dias | Hotel 4 estrelas | Passeios incluídos</p>
-        <p class="preco">R$ 1.299</p>
-        <a href="#" class="btn">Ver Detalhes</a>
+        <img src="https://images.ctfassets.net/iiu58j8xnirw/QfbBXkeu2ZRQfUdURZF7d/5e3a85f9a6a15eeaebb663a75b972491/noosa.jpg"/>
+        <h3>Noosa Heads, Austrália</h3>
+        <p>10 dias | Hotel 4 estrelas | Passeio incluído</p>
+        <p class="preco">R$ 42.399</p>
+        <a href="detalhes-pacote.html" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1730645612587-34b10451790a?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Zagreb, Croácia</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
-        <p class="preco">R$ 1.599</p>
+        <p class="preco">R$ 35.599</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1574974915729-40753c60260d?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Bucareste, Romênia</h3>
         <p>6 dias | City tour | Guia local em português</p>
-        <p class="preco">R$ 1.399</p>
+        <p class="preco">R$ 28.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
     </section>
@@ -52,22 +52,22 @@
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1684871640396-8e2d366f4f0c?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Lucerna, Suíça</h3>
-        <p>5 dias | Hotel 4 estrelas | Passeios incluídos</p>
-        <p class="preco">R$ 1.299</p>
+        <p>5 dias | Hotel 5 estrelas | Passeios incluídos</p>
+        <p class="preco">R$ 30.299</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1671101757570-c0b573c6feb3?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3> Seul, Coreia do Sul</h3>
         <p>7 dias | Café da manhã incluso | Transfer gratuito</p>
-        <p class="preco">R$ 1.599</p>
+        <p class="preco">R$ 27.799</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
       <div class="pacote">
         <img src="https://images.unsplash.com/photo-1643753265232-45c28cc86a12?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
         <h3>Montevidéu, Uruguai</h3>
-        <p>6 dias | City tour | Guia local em português</p>
-        <p class="preco">R$ 1.399</p>
+        <p>5 dias | City tour | Guia local em português</p>
+        <p class="preco">R$ 20.399</p>
         <a href="#" class="btn">Ver Detalhes</a>
       </div>
     </section>
@@ -82,6 +82,7 @@
           <h3>Links Rápidos</h3>
           <ul>
             <li><a href="index.html">Página Inicial</a></li>
+            <li><a href="pegada-carbono.html">Pegada CO₂</a></li>
             <li><a href="pacotes.html">Pacotes</a></li>
             <li><a href="sobre.html">Sobre Nós</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -90,8 +91,10 @@
         <div class="footer-section">
           <h3>Contato</h3>
           <ul>
-            <li>contato@alemdossonhos.com.br</li>
-            <li>+55 (21) 9876-5432</li>
+            <li><i class="fas fa-map-marker-alt"></i> Av. Atlântica, 2000 - Rio de Janeiro, RJ</li>
+            <li><i class="fas fa-phone"></i> +55 (21) 9876-5432</li>
+            <li><i class="fas fa-envelope"></i> contato@alemdossonhos.com.br</li>
+            <li><i class="fas fa-clock"></i> Segunda a Sexta: 9h às 18h</li>
           </ul>
         </div>
       </div>
