--- a/sobre.html
+++ b/sobre.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="header">
-    <h2>✈ Além dos Sonhos</h2>
+    <img src="copia.png" alt="Logo Além dos Sonhos" class="header-logo">
     <nav>
       <a href="index.html">Início</a>
-      <a href="#">Destinos</a>
+      <a href="pegada-carbono.html">Pegada CO₂</a>
       <a href="pacotes.html">Pacotes</a>
       <a href="sobre.html" class="active">Sobre Nós</a>
       <a href="contato.html">Contato</a>
@@ -71,6 +71,7 @@
         <h3>Links Rápidos</h3>
         <ul>
           <li><a href="index.html">Página Inicial</a></li>
+          <li><a href="pegada-carbono.html">Pegada CO₂</a></li>
           <li><a href="pacotes.html">Pacotes</a></li>
           <li><a href="sobre.html">Sobre Nós</a></li>
           <li><a href="contato.html">Contato</a></li>
@@ -79,8 +80,10 @@
       <div class="footer-section">
         <h3>Contato</h3>
         <ul>
-          <li>contato@alemdossonhos.com.br</li>
-          <li>+55 (21) 9876-5432</li>
+          <li><i class="fas fa-map-marker-alt"></i> Av. Atlântica, 2000 - Rio de Janeiro, RJ</li>
+          <li><i class="fas fa-phone"></i> +55 (21) 9876-5432</li>
+          <li><i class="fas fa-envelope"></i> contato@alemdossonhos.com.br</li>
+          <li><i class="fas fa-clock"></i> Segunda a Sexta: 9h às 18h</li>
         </ul>
       </div>
     </div>
