--- a/detalhes-pacote.html
+++ b/detalhes-pacote.html
@@ -125,7 +125,7 @@
                 <h3>Aéreo</h3>
                 <ul>
                   <li>Voo com duas escalas ida e volta</li>
-                  <li>Companhia: Emirates / Jatlag</li>
+                  <li>Companhia: Emirates </li>
                   <li>Bagagem despachada inclusa</li>
                 </ul>
               </div>
